kubernetes/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: kafka
spec:
  replicas: 1

  selector:
    matchLabels:
      app: kafka

  template:
    metadata:
      labels:
        app: kafka

    spec:
      containers:
        - name: kafka
          image: apache/kafka:4.1.0

          ports:
            - containerPort: 9092
              name: kafka
            - containerPort: 9093
              name: controller
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: kafka
spec:
  selector:
    app: kafka

  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
