kubernetes/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: payments
spec:
  selector:
    app: payment-service

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

  type: ClusterIP
