kubernetes/payment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: payment-ingress
  namespace: payments

spec:
  ingressClassName: nginx

  rules:
    - host: payments.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: payment-service
                port:
                  number: 8080
